--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bilíngue School</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
-    
+    <header>
+
+        <div class="menu">
+            <div class="logo">
+                <img src="img/img-logo.png" alt="imagem da logo do menu">
+            </div>
+
+            <nav class="links">
+                <a href="">INÍCIO</a>
+                <a href="">IDIOMAS</a>
+                <a href="">CONTATO</a>
+                <a href="">MATRICULE-SE</a>
+                <img src="img/menu-aberto (3) 1.png" alt="imagem do menu mobile">
+            </nav>
+
+            <nav class="sidebar">
+                <img src="img/menu-close.png" alt="imagem para fechar o menu mobile">
+                <a href="">INÍCIO</a>
+                <a href="">IDIOMAS</a>
+                <a href="">CONTATO</a>
+                <a href="">MATRICULE-SE</a>
+            </nav>
+        </div>
+
+    </header>
 </body>
+
 </html>
