--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
         </div>
 
     </header>
+
+    <main class="hero-section">
+
+        <div class="text">
+            <h1>APRENDA NOVOS IDIOMAS E CONECTE-SE COM O MUNDO</h1>
+            <p>CURSOS DE INGLÊS, ESPANHOL, ALEMÃO, ITALIANO, FRANCÊS E JAPONÊS PARA TODAS IDADES</p>
+            <button>COMECE AGORA</button>
+        </div>
+
+    </main>
 </body>
 
 </html>
