--- a/index.html
+++ b/index.html
@@ -44,6 +44,45 @@
         </div>
 
     </main>
+
+    <article class="section-idiomas">
+
+        <div class="carrossel-idiomas">
+
+            <div class="cards-idioma">
+
+                <div class="card-1">
+                    <img src="img/card-1.png" alt="imagem do primeiro card">
+                </div>
+
+                <div class="card-2">
+                    <img src="img/card-2.png" alt="imagem do segundo card">
+                </div>
+
+                <div class="card-3">
+                    <img src="img/card-3.png" alt="imagem do terceiro card">
+                </div>
+
+                <div class="card-4">
+                    <img src="img/card-4.png" alt="imagem do quarto card">
+                </div>
+
+                <div class="card-5">
+                    <img src="img/card-5.png" alt="imagem do quinto card">
+                </div>
+
+                <div class="card-6">
+                    <img src="img/card-6.png" alt="imagem do sexto card">
+                </div>
+
+                <img class="btn-antes" src="img/seta-volta.png" alt="seta para voltar">
+                <img class="btn-prox" src="img/seta-prox.png" alt="seta para passar pro próximo">
+
+            </div>
+        </div>
+
+    </article>
+
 </body>
 
 <script src="script.js"></script>
